--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="activity_margin_content">24dp</dimen>
+    <dimen name="padding_small">5dp</dimen>
 
 </resources>
